--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::<aws-account-id>:role/github-actions-terraform-role
+          role-to-assume: arn:aws:iam::174512274809:role/github-actions-terraform-role
           aws-region: us-east-1
 
       - name: Install Terraform
