--- a/scripts/deployment-automation-scripts/config.yaml
+++ b/scripts/deployment-automation-scripts/config.yaml
@@ -1,121 +1,28 @@
-############################################
-#  Global / App Information
-############################################
-app:
-  name: wordpress
-  environment: prod
+terraform:
+  backend:
+    bucket_name: terraform-state-101120255555
+    region: eu-central-1
 
-############################################
-#  AWS Regions
-############################################
-regions:
-  primary: us-east-1
-  dr: ca-central-1
+docker:
+  dockerhub_image: qaysalnajjad/ecs-wordpress-app:v3.6
+  ecr_repo_name: ecs-wordpress-app
 
-############################################
-#  DR Policy
-############################################
-dr: 
-  mode: cold
-  rpo_minutes: 15
+media:
+  s3:
+    primary_bucket: wordpress-media-primary-2004
+    dr_bucket: wordpress-media-dr-2004
 
-############################################
-#  RDS Configuration
-############################################
-rds: 
-  enabled: true
-  engine: mysql
-  snapshot: 
-    type: automated
-    tag:
-      key: app
-      value: wordpress
+rds:
+  identifier: wordpress-rds
 
-############################################
-#  ECS Configuration
-############################################
-ecs:
-  enabled: true
-  cluster:
-    tag:
-      key: app
-      value: wordpress
-  task_definition:
-    family: wordpress-task
+dns:
+  hosted_zone_id: Z0201471MCIEQVEUEMQF
+  primary_domain: rqays.com
+  certificate_sans:
+    - "*.rqays.com"
 
-############################################
-#  ECR Configuration
-############################################
-ecr:
-  enabled: true
-  repository: wordpress
-  image:
-    tag: latest
-
-############################################
-#  Ingress (ALB)
-############################################
-ingress:
-  enabled: true
-  type: alb
-  tag:
-    key: role
-    value: dr-ingress
-
-############################################
-#  CloudFront
-############################################
-cloudfront:
-  enabled: true
-  distribution_id: 
-
-############################################
-#  IAM / Permissions
-############################################
-iam:
-  check_enabled: true
-
-
-
-
-
-
-
-
-
-############################################
-#  Terraform Backend Config
-############################################
-TF_STATE_BUCKET_NAME="terraform-state-101120255555"
-TF_STATE_BUCKET_REGION="eu-central-1"
-
-############################################
-#  Docker / Container Config
-############################################
-DOCKERHUB_IMAGE="qaysalnajjad/ecs-wordpress-app:v3.6"
-ECR_REPO_NAME="ecs-wordpress-app"
-
-############################################
-#  Media S3 buckets
-############################################
-PRIMARY_MEDIA_S3_BUCKET="wordpress-media-primary-2004"
-DR_MEDIA_S3_BUCKET="wordpress-media-dr-2004"
-
-############################################
-#  Media S3 buckets
-############################################
-RDS_IDENTIFIER="wordpress-rds"
-
-############################################
-#  Domain and hosted zone
-############################################
-HOSTED_ZONE_ID="Z0201471MCIEQVEUEMQF"
-PRIMARY_DOMAIN="rqays.com"   # Primary custom domain without www (e.g., yourdomain.com)
-CERTIFICATE_SANs='["*.rqays.com"]'
-
-############################################
-#  SSL certificates
-############################################
-PRIMARY_ALB_SSL_CERTIFICATE_ARN="arn:aws:acm:us-east-2:174512274809:certificate/80cf0123-dc9b-44ab-90d4-6c1f6bb1d951"
-DR_ALB_SSL_CERTIFICATE_ARN=""
-CLOUDFRONT_SSL_CERTIFICATE_ARN="arn:aws:acm:us-east-1:174512274809:certificate/bfdb54d1-e12c-483e-9c4a-e5697af6c65d"
+certificates:
+  alb:
+    primary: arn:aws:acm:us-east-2:174512274809:certificate/80cf0123-dc9b-44ab-90d4-6c1f6bb1d951
+    dr: ""
+  cloudfront: arn:aws:acm:us-east-1:174512274809:certificate/bfdb54d1-e12c-483e-9c4a-e5697af6c65d
